# django-boilerplate

./: .gitignore  README.md  pyproject.toml
src/conf/: asgi.py  wsgi.py
src/conf/settings/: base.py  development.py
